<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="@dimen/row_monuments_vertical_margin">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="0dp"
        android:layout_height="@dimen/row_monuments_card_height"
        app:cardBackgroundColor="@color/md_theme_light_gray"
        app:cardCornerRadius="@dimen/row_monuments_card_corner_radius"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/monumentsImgMain"
                android:layout_width="0dp"
                android:layout_height="@dimen/row_monuments_img_height"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/monuments__img_main_description"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:background="@color/md_theme_dark_onTertiary" />

            <TextView
                android:id="@+id/monumentsLabelName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/fragment_margin"
                android:layout_marginTop="@dimen/cardview_margin_horizontal"
                android:textSize="@dimen/row_monuments_title_size"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/monumentsImgMain"
                tools:text="La Alhambra" />

            <TextView
                android:id="@+id/monumentsLabelCity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/fragment_margin"
                android:layout_marginBottom="@dimen/content_margin"
                android:textColor="@color/md_theme_dark_outline"
                android:textSize="@dimen/monuments_text_body_size"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="Granada" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/monumentsBtnFavorite"
                style="@style/Widget.App.Button.OutlinedButton.IconOnly"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/detail__fav_btn_description"
                android:tag="UnCheck"
                app:icon="@drawable/ic__monuments_star_border_24"
                app:iconSize="@dimen/detail_icon_size"
                app:iconTint="@color/yellow"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/monumentsImgMain"
                app:strokeWidth="0dp" />

            <ImageView
                android:id="@+id/monumentsImgFlag"
                android:layout_width="@dimen/monuments_country_flag_size"
                android:layout_height="@dimen/monuments_country_flag_size"
                android:layout_marginStart="@dimen/monuments_country_flag_start_margin"
                android:contentDescription="@string/monuments__country_flag_img"
                app:layout_constraintStart_toEndOf="@id/monumentsLabelCity"
                app:layout_constraintTop_toBottomOf="@id/monumentsLabelName"
                tools:background="@color/black" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>